j--/tests/pass/Remainder.java
package pass;

import java.lang.System;

public class Remainder {

	public static void main(String[] args) {
		System.out.println(7 % 4);
	}

	public int remainder(int x, int y) {
		return x % y;
	}

}